# geoApple

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
scripts/: SERVER_SETUP_GUIDE.md  convert_via_to_yoloseg.py  eval_diameter.py  eval_occlusion_stratified.py  eval_pr_curve.py  eval_yolo_occlusion_stratified.py  evaluate.py  evaluate_baseline.py  make_architecture.py  make_bar_charts.py  make_composites.py  replot_pr_curve.py  run_multi_seed.py  run_yolo_baselines.py  setup_server.sh  train_ablation.py  train_baseline.py  train_geoapple.py  visualize_failures.py  visualize_paper.py
src/: __init__.py
src/data_module/: __init__.py  rgbd_dataset.py
src/model_module/: __init__.py  amodal_head.py  depth_encoder.py  fusion.py  geoapple_model.py  size_head.py
src/trainer_module/: __init__.py  loss.py  trainer.py
src/utils/: __init__.py  seed.py
