[project]
name = "geoapple-seg"
version = "0.1.0"
description = "GeoApple-Seg: Geometry-Aware Apple Instance Segmentation with RGB-D Fusion"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "ultralytics>=8.3.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
